package kr.hossam.myshop.models;

import lombok.Data;

@Data
public class Category {
    private int id;
    private String name;
    private String regDate;
    private String editDate;
}