use myshop;

# 테이블이 이미 존재한다면 삭제
DROP TABLE IF EXISTS `members`;

# 테이블 만들기
CREATE TABLE `members` (
    `id` INT(11) NOT NULL AUTO_INCREMENT COMMENT '일련번호',
    `user_id` VARCHAR(30) NOT NULL COMMENT '아이디',
    `user_pw` VARCHAR(255) NOT NULL COMMENT '비밀번호(암호화저장)',
    `user_name` VARCHAR(30) NOT NULL COMMENT '회원이름',
    `email` VARCHAR(255) NOT NULL COMMENT '이메일',
    `phone` VARCHAR(20) NOT NULL COMMENT '연락처',
    `birthday` DATE NOT NULL COMMENT '생년월일',
    `gender` ENUM('M', 'F') NOT NULL COMMENT '성별(M=남자,F=여자)',
    `postcode` CHAR(5) NOT NULL COMMENT '우편번호',
    `addr1` VARCHAR(255) NOT NULL COMMENT '검색된 주소',
    `addr2` VARCHAR(255) NOT NULL COMMENT '나머지 주소',
    `photo` VARCHAR(255) NULL COMMENT '프로필사진 정보',
    `is_out` ENUM('Y', 'N') NOT NULL COMMENT '탈퇴여부(Y/N)',
    `is_admin` ENUM('Y', 'N') NOT NULL COMMENT '관리자 여부(Y/N)',
    `login_date` DATETIME NULL DEFAULT NULL COMMENT '마지막 로그인 일시',
    `reg_date` DATETIME NOT NULL COMMENT '등록일시',
    `edit_date` DATETIME NOT NULL COMMENT '변경일시',
    PRIMARY KEY (`id`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COMMENT='회원';

# 테이블이 이미 존재한다면 삭제
DROP INDEX IF EXISTS SPRING_SESSION_IX1 ON SPRING_SESSION;
DROP INDEX IF EXISTS SPRING_SESSION_IX2 ON SPRING_SESSION;
DROP INDEX IF EXISTS SPRING_SESSION_IX3 ON SPRING_SESSION;
DROP TABLE IF EXISTS `SPRING_SESSION`;

CREATE TABLE SPRING_SESSION (
    PRIMARY_ID CHAR(36) NOT NULL,
    SESSION_ID CHAR(36) NOT NULL,
    CREATION_TIME BIGINT NOT NULL,
    LAST_ACCESS_TIME BIGINT NOT NULL,
    MAX_INACTIVE_INTERVAL INT NOT NULL,
    EXPIRY_TIME BIGINT NOT NULL,
    PRINCIPAL_NAME VARCHAR(100),
    CONSTRAINT SPRING_SESSION_PK PRIMARY KEY (PRIMARY_ID)
);

CREATE UNIQUE INDEX SPRING_SESSION_IX1 ON SPRING_SESSION (SESSION_ID);
CREATE INDEX SPRING_SESSION_IX2 ON SPRING_SESSION (EXPIRY_TIME);
CREATE INDEX SPRING_SESSION_IX3 ON SPRING_SESSION (PRINCIPAL_NAME);

# 테이블이 이미 존재한다면 삭제
DROP TABLE IF EXISTS `SPRING_SESSION_ATTRIBUTES`;

CREATE TABLE SPRING_SESSION_ATTRIBUTES (
       SESSION_PRIMARY_ID CHAR(36) NOT NULL,
       ATTRIBUTE_NAME VARCHAR(200) NOT NULL,
       ATTRIBUTE_BYTES BLOB NOT NULL,
       CONSTRAINT SPRING_SESSION_ATTRIBUTES_PK PRIMARY KEY (SESSION_PRIMARY_ID, ATTRIBUTE_NAME),
       CONSTRAINT SPRING_SESSION_ATTRIBUTES_FK FOREIGN KEY (SESSION_PRIMARY_ID) REFERENCES SPRING_SESSION(PRIMARY_ID) ON DELETE CASCADE
);