Enum members_gender {
    "M"
    "F"
}

Enum members_is_out {
    "Y"
    "N"
}

Enum members_is_admin {
    "Y"
    "N"
}

Table categories {
    id int [pk, increment, note: "카테고리번호"]
    name varchar(255) [not null, unique, note: "카테고리 이름"]
    reg_date datetime [not null, default: `current_timestamp()`, note: "등록일시"]
    edit_date datetime [not null, default: `current_timestamp()`, note: "변경일시"]
}

Table members {
    id int [pk, increment, note: "일련번호"]
    user_id varchar(30) [not null, note: "아이디"]
    user_pw varchar(255) [not null, note: "비밀번호(암호화저장)"]
    user_name varchar(30) [not null, note: "회원이름"]
    email varchar(255) [not null, note: "이메일"]
    phone varchar(20) [not null, note: "연락처"]
    birthday date [not null, note: "생년월일"]
    gender members_gender [not null, note: "성별(M=남자,F=여자)"]
    postcode char(5) [not null, note: "우편번호"]
    addr1 varchar(255) [not null, note: "검색된 주소"]
    addr2 varchar(255) [not null, note: "나머지 주소"]
    photo varchar(255) [note: "프로필사진 정보"]
    is_out members_is_out [not null, note: "탈퇴여부(Y/N)"]
    is_admin members_is_admin [not null, note: "관리자 여부(Y/N)"]
    login_date datetime [note: "마지막 로그인 일시"]
    reg_date datetime [not null, note: "등록일시"]
    edit_date datetime [not null, note: "변경일시"]
}

Table products {
    id int [pk, note: "상품번호"]
    category_id int [not null, note: "카테고리번호"]
    name varchar(255) [not null, note: "상품명"]
    price int [not null, note: "상품가격"]
    discount int [not null, default: 0, note: "할인율(%)"]
    summary text [note: "상품 요약설명"]
    image_url text [note: "상품 대표 이미지"]
    delivery_info varchar(512) [note: "배송정보"]
    product_url text [note: "상품 상세 URL"]
    reg_date datetime [not null, default: `current_timestamp()`, note: "등록일시"]
    edit_date datetime [not null, default: `current_timestamp()`, note: "변경일시"]
}

Table product_options {
    id int [pk, increment, note: "옵션번호"]
    product_id int [not null, note: "상품번호"]
    name varchar(255) [not null, note: "옵션명"]
    value varchar(255) [not null, note: "옵션값"]
    reg_date datetime [default: `current_timestamp()`, note: "등록일시"]
    edit_date datetime [default: `current_timestamp()`, note: "변경일시"]
}

Ref: products.category_id > categories.id
Ref: product_options.product_id > products.id